[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Meng-Hsin Tung <mtung@netskope.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hello = {git = "https://github.com/ns-mtung/hello.git", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
